# dokugen

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  dokugen.cpp  dokugen.h  main.cpp
